Psoc kode HW/Kode til til loadcell/Scale.cydsn/BUILD.log
--------------- Build Started: 11/28/2023 14:37:21 Project: Scale, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\magnu\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\magnu\OneDrive\Dokumenter\GitHub\B-CAC\Psoc kode HW\Kode til til loadcell\Scale.cydsn\Scale.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\magnu\OneDrive\Dokumenter\GitHub\B-CAC\Psoc kode HW\Kode til til loadcell\Scale.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 1 pin(s) will be assigned a location by the fitter: PWM_Out(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/Loadcell.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c Loadcell.c -o .\CortexM3\ARM_GCC_541\Debug\Loadcell.o
Loadcell.c: In function 'wait_for_weight':
Loadcell.c:55:10: warning: 'result_gram' may be used uninitialized in this function [-Wmaybe-uninitialized]
     while(result_gram<50)
          ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:152:48: warning: format '%d' expects argument of type 'int', but argument 4 has type 'uint32_t {aka long unsigned int}' [-Wformat=]
         snprintf(uartBuffer,sizeof(uartBuffer),"tid (g) %d\r\n ", tid);
                                                ^
main.c:152:48: warning: format '%d' expects argument of type 'int', but argument 4 has type 'uint32_t {aka long unsigned int}' [-Wformat=]
main.c:42:13: warning: variable 'timestop' set but not used [-Wunused-but-set-variable]
     uint8_t timestop=0;
             ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/Timer.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c Timer.c -o .\CortexM3\ARM_GCC_541\Debug\Timer.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/FlagMotor.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c FlagMotor.c -o .\CortexM3\ARM_GCC_541\Debug\FlagMotor.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/led.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c led.c -o .\CortexM3\ARM_GCC_541\Debug\led.o
led.c: In function 'startLedGreen':
led.c:23:5: error: 'PWM_1_start' undeclared (first use in this function)
     PWM_1_start
     ^
led.c:23:5: note: each undeclared identifier is reported only once for each function it appears in
led.c:24:1: error: expected ';' before '}' token
 }
 ^
led.c: At top level:
led.c:26:1: error: expected identifier or '(' before '{' token
 {
 ^
led.c:30:1: error: expected identifier or '(' before '{' token
 {
 ^
led.c:34:1: error: expected identifier or '(' before '{' token
 {
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/28/2023 14:37:43 ---------------
